syntax = "proto3";
package douyin.core;
import "user.proto";
option go_package = "/pb";



message douyin_feed_request {
  int64 latest_time = 1; // 可选参数，限制返回视频的最新投稿时间戳，精确到秒，不填表示当前时间
  string token = 2; // 可选参数，登录用户设置
}

message douyin_feed_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  repeated Video video_list = 3; // 视频列表
  optional int64 next_time = 4; // 本次返回的视频中，发布最早的时间，作为下次请求时的latest_time
}

message douyin_publish_action_request {
  string token = 1; // 用户鉴权token
  bytes data = 2; // 视频数据
  string title = 3; // 视频标题
}

message douyin_publish_action_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
}

message douyin_publish_list_request {
  int64 user_id = 1; // 用户id
  string token = 2; // 用户鉴权token
}

message douyin_publish_list_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  repeated Video video_list = 3; // 用户发布的视频列表
}

message douyin_favorite_action_request {
  string token = 1; // 用户鉴权token
  int64 video_id = 2; // 视频id
  int32 action_type = 3; // 1-点赞，2-取消点赞
}

message douyin_favorite_action_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
}

message douyin_favorite_list_request {
  int64 user_id = 1; // 用户id
  string token = 2; // 用户鉴权token
}

message douyin_favorite_list_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  repeated Video video_list = 3; // 用户点赞视频列表
}


message Video {
  int64 id = 1; // 视频唯一标识
  User author = 2; // 视频作者信息
  string play_url = 3; // 视频播放地址
  string cover_url = 4; // 视频封面地址
  int64 favorite_count = 5;  // 视频的点赞总数
  int64 comment_count = 6; // 视频的评论总数
  bool is_favorite = 7; // true-已点赞，false-未点赞
  string title = 8; // 视频标题
}

service feedService {
  rpc GetFeedList(douyin_feed_request) returns(douyin_feed_response);
  rpc PublishVideo(douyin_publish_action_request) returns(douyin_publish_action_response);
  rpc GetPublishList(douyin_publish_list_request) returns(douyin_publish_list_response);
  rpc Favorite(douyin_favorite_action_request) returns(douyin_favorite_action_response);
  rpc FavoriteList(douyin_favorite_list_request) returns(douyin_favorite_list_response);

}